--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           <meta name="description" content="Learn about Biotechnology Investing and Science Concepts">
           <meta name="keywords" content="Biotechnology, Biotech, Genetics, Immunology, Oncology, Cell Therapies"
           <meta name="author" content="CoderKid2k">
+          <meta name="twitter:card" content="summary">
+          <meta name="twitter:site" content="@biotech2k1">
+          <meta name="twitter:image" content="images/thumnail.png">
+          <meta name="twitter:title" content="biotech2k.com">
 
           <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="images/favicon.ico">
