Twitter Card Update

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <meta name="description" content="Learn about Biotechnology Investing and Science Concepts">
           <meta name="keywords" content="Biotechnology, Biotech, Genetics, Immunology, Oncology, Cell Therapies"
           <meta name="author" content="CoderKid2k">
-          <meta name="twitter:card" content="summary">
+          <meta name="twitter:card" content="summary_large_image">
           <meta name="twitter:site" content="@biotech2k1">
-          <meta name="twitter:image" content="images/thumbnail.png">
           <meta name="twitter:title" content="biotech2k.com">
+          <meta name="twitter:image" content="https://biotech2k.com/index/images/thumbnail.jpg">
 
           <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -78,6 +78,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <div class="logo"><img class="page-logo" src="images/thumbnail.jpg"></div>
                
                <div class="front-page">
                     <section class="news-updates">
