Twitter Card Fix

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <meta name="twitter:card" content="summary_large_image">
           <meta name="twitter:site" content="@biotech2k1">
           <meta name="twitter:title" content="biotech2k.com">
-          <meta name="twitter:image" content="https://biotech2k.com/index/images/thumbnail.jpg">
+          <meta name="twitter:image" content="https://biotech2k.com/images/thumbnail.jpg">
 
           <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="images/favicon.ico">
