Fixed Twitter Card

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
           <meta name="keywords" content="Biotechnology, Biotech, Genetics, Immunology, Oncology, Cell Therapies"
           <meta name="author" content="CoderKid2k">
           <meta name="twitter:card" content="summary_large_image">
-          <meta name="twitter:site" content="@biotech2k1">
+          <meta name="twitter:site:id" content="@biotech2k1">
+          <meta name="twitter:creator" content="@biotech2k1">
           <meta name="twitter:title" content="biotech2k.com">
+          <meta name="twitter:description" content="Learn about investing in biotech">
           <meta name="twitter:image" content="https://www.biotech2k.com/images/thumbnail.jpg">
 
           <!-- Favicon -->
