Fixed Nav Links

--- a/companies/beam.html
+++ b/companies/beam.html
@@ -226,7 +226,10 @@
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="schrodinger.html">&lt;Previous</a> <a href="intellia.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="schrodinger.html">&lt;Previous</a> <a href="intellia.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
