--- a/companies/fate.html
+++ b/companies/fate.html
@@ -188,7 +188,10 @@
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="sana.html">&lt;Previous</a> <a href="caribou.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="sana.html">&lt;Previous</a> <a href="caribou.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
