--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <meta name="description" content="Learn about Biotechnology Investing and Science Concepts">
           <meta name="keywords" content="Biotechnology, Biotech, Genetics, Immunology, Oncology, Cell Therapies"
           <meta name="author" content="CoderKid2k">
-          <meta name="twitter:card" content="summary_large_image">
+          <meta name="twitter:card" content="summary">
           <meta name="twitter:site:id" content="@biotech2k1">
           <meta name="twitter:creator" content="@biotech2k1">
-          <meta name="twitter:title" content="biotech2k.com">
-          <meta name="twitter:description" content="Learn about investing in biotech">
+          <meta name="twitter:title" content="Biotech2k.com">
+          <meta name="twitter:description" content="Learn about Investing and Science of biotech">
           <meta name="twitter:image" content="https://www.biotech2k.com/images/thumbnail.jpg">
 
           <!-- Favicon -->
@@ -80,7 +80,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <div class="logo"><img class="page-logo" src="images/thumbnail.jpg"></div>
+               <div class="logo"><img class="page-logo" src="images/thumbnail.jpg" alt="Biotech2k.com"></div>
                
                <div class="front-page">
                     <section class="news-updates">
