--- a/companies/blueprint.html
+++ b/companies/blueprint.html
@@ -233,11 +233,13 @@
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="caribou.html">&lt;Previous</a> <a href="mirati.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="caribou.html">&lt;Previous</a> <a href="mirati.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
-
           </main>
 
           <!--Here Starts the Footer-->
