--- a/companies/caribou.html
+++ b/companies/caribou.html
@@ -209,7 +209,10 @@
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="fate.html">&lt;Previous</a> <a href="blueprint.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="fate.html">&lt;Previous</a> <a href="blueprint.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
