--- a/companies/exscientia.html
+++ b/companies/exscientia.html
@@ -221,7 +221,10 @@
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="recursion.html">&lt;Previous</a> <a href="abcellera.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="recursion.html">&lt;Previous</a> <a href="abcellera.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>    
