--- a/companies/ginkgo.html
+++ b/companies/ginkgo.html
@@ -177,7 +177,10 @@
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="oxford.html">&lt;Previous</a> <a href="twist.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="oxford.html">&lt;Previous</a> <a href="twist.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
