--- a/companies/ipsc.html
+++ b/companies/ipsc.html
@@ -197,7 +197,10 @@
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="twist.html">&lt;Previous</a> <a href="sana.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="twist.html">&lt;Previous</a> <a href="sana.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
