--- a/companies/kymera.html
+++ b/companies/kymera.html
@@ -211,7 +211,10 @@
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="mirati.html">&lt;Previous</a> <a href="revolution.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="mirati.html">&lt;Previous</a> <a href="revolution.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
