--- a/companies/mirati.html
+++ b/companies/mirati.html
@@ -223,7 +223,10 @@
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="blueprint.html">&lt;Previous</a> <a href="kymera.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="blueprint.html">&lt;Previous</a> <a href="kymera.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
