--- a/companies/pacbio.html
+++ b/companies/pacbio.html
@@ -159,7 +159,10 @@
                          </section>  
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="invitae.html">&lt;Previous</a> <a href="oxford.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="invitae.html">&lt;Previous</a> <a href="oxford.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
