--- a/companies/prime.html
+++ b/companies/prime.html
@@ -208,7 +208,10 @@
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="verve.html">&lt;Previous</a> <a href="invitae.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a> 
+                    </div>
+                    <div class="back-companies">
+                         <a href="verve.html">&lt;Previous</a> <a href="invitae.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
