--- a/companies/recursion.html
+++ b/companies/recursion.html
@@ -205,7 +205,10 @@
                          
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="relay.html">&lt;Previous</a> <a href="exscientia.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="relay.html">&lt;Previous</a> <a href="exscientia.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
