--- a/companies/relay.html
+++ b/companies/relay.html
@@ -219,7 +219,10 @@
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="monterosa.html">&lt;Previous</a> <a href="recursion.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="monterosa.html">&lt;Previous</a> <a href="recursion.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
