--- a/companies/revolution.html
+++ b/companies/revolution.html
@@ -206,7 +206,10 @@
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="kymera.html">&lt;Previous</a> <a href="monterosa.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="kymera.html">&lt;Previous</a> <a href="monterosa.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
