--- a/companies/sana.html
+++ b/companies/sana.html
@@ -216,7 +216,10 @@
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="ipsc.html">&lt;Previous</a> <a href="fate.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="ipsc.html">&lt;Previous</a> <a href="fate.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
