Added Twitter Cards to Every Page

--- a/learning/oncology.html
+++ b/learning/oncology.html
@@ -20,6 +20,12 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Learn about concepts of Oncology like Chemotherapies, Cancer Indicdence, Oncogenes, Hallmarks of Cancer and Cell Therapies">
           <meta name="author" content="CoderKid2k">
+          <meta name="twitter:card" content="summary">
+          <meta name="twitter:site:id" content="@biotech2k1">
+          <meta name="twitter:creator" content="@biotech2k1">
+          <meta name="twitter:title" content="Biotech2k.com">
+          <meta name="twitter:description" content="Learn about Oncology">
+          <meta name="twitter:image" content="https://www.biotech2k.com/images/thumbnail.jpg">
 
           <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
