--- a/companies/prime.html
+++ b/companies/prime.html
@@ -19,7 +19,12 @@
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Prime Medicines in CRISPR Prime Editing">
-          <meta name="author" content="CoderKid2k">
+          <meta name="author" content="CoderKid2k"><meta name="twitter:card" content="summary">
+          <meta name="twitter:site:id" content="@biotech2k1">
+          <meta name="twitter:creator" content="@biotech2k1">
+          <meta name="twitter:title" content="Biotech2k.com">
+          <meta name="twitter:description" content="Learn about Prime Medicines">
+          <meta name="twitter:image" content="https://www.biotech2k.com/images/thumbnail.jpg">
 
           <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
