--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/14/2023: </strong> I added my Biotech 2k Logo which isn't anything special. I updated the Company Profile 
+                                   pages. The links looked bad on small screen so I fixed them. I added Twitter Cards to every page for linking to 
+                                   Twitter.
+                              </p>
+                              <p> 
                                    <strong>2/14/2023: </strong> Updated the innovation page to expand some of the concepts and make it 
                                    more reader friendly to newer investors who don't already understand some of the science terms. 
                               </p>
@@ -109,10 +114,6 @@
                                    <strong>2/13/2023: </strong> I added a Partnership Secton under each Company's Profile page.
                                    I also added links section to their Website Key areas like Press Releases, Events, SEC filings and Publications.
                                    I added navigation links at the bottom of each Profile page.
-                              </p>
-                              <p> 
-                                   <strong>2/13/2023: </strong> I finished up the Companies pages. I even started adding new data 
-                                   to companies as they report earnings with links to the Company's Website and Partnerships.
                               </p>
                          </div>
                     </section>
