--- a/learning/genetics.html
+++ b/learning/genetics.html
@@ -20,6 +20,12 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Learn concepts of Genetics like DNA Stucture, DNA Packaging, Chromosomes, Heredity, and Inheritance">
           <meta name="author" content="CoderKid2k">
+          <meta name="twitter:card" content="summary">
+          <meta name="twitter:site:id" content="@biotech2k1">
+          <meta name="twitter:creator" content="@biotech2k1">
+          <meta name="twitter:title" content="Biotech2k.com">
+          <meta name="twitter:description" content="Learn about Genetics">
+          <meta name="twitter:image" content="https://www.biotech2k.com/images/thumbnail.jpg">
 
           <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
