--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/15/2023: </strong> I added my latest guide to valuation and started filling out 
+                                   the Biology page.
+                              </p>
+                              <p> 
                                    <strong>2/14/2023: </strong> I added my Biotech 2k Logo which isn't anything special. I updated the Company Profile 
                                    pages. The links looked bad on small screen so I fixed them. I added Twitter Cards to every page for linking to 
                                    Twitter.
@@ -109,11 +113,6 @@
                               <p> 
                                    <strong>2/14/2023: </strong> Updated the innovation page to expand some of the concepts and make it 
                                    more reader friendly to newer investors who don't already understand some of the science terms. 
-                              </p>
-                              <p> 
-                                   <strong>2/13/2023: </strong> I added a Partnership Secton under each Company's Profile page.
-                                   I also added links section to their Website Key areas like Press Releases, Events, SEC filings and Publications.
-                                   I added navigation links at the bottom of each Profile page.
                               </p>
                          </div>
                     </section>
@@ -131,7 +130,7 @@
                          <div>
                               <h2 class="section-title">Twitter</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">We&#39;re pleased to announce that VERVE-101 has been awarded the Innovation Passport for the treatment of heterozygous familial hypercholesterolemia under the Innovative Licensing and Access Pathway by the MHRA in the UK. Read more: <a href="https://t.co/LoOGHBVo3R">https://t.co/LoOGHBVo3R</a> <a href="https://t.co/tBbjMtTrrd">pic.twitter.com/tBbjMtTrrd</a></p>&mdash; Verve Therapeutics (@VerveTx) <a href="https://twitter.com/VerveTx/status/1625457738783285249?ref_src=twsrc%5Etfw">February 14, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">&quot;This pathogen monitoring program at Kigali Intl Airport will act like a public health radar, providing leaders with near-real-time data to inform targeted response strategies.&quot; We&#39;re excited to announce a new partnership with the Rwanda Biomedical Centre! <a href="https://t.co/VaVv4mSXI3">https://t.co/VaVv4mSXI3</a></p>&mdash; Concentric by Ginkgo (@concentricbygbw) <a href="https://twitter.com/concentricbygbw/status/1625829732687175687?ref_src=twsrc%5Etfw">February 15, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
