--- a/companies/blueprint.html
+++ b/companies/blueprint.html
@@ -144,7 +144,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $1 billion
+                                   Cash $1.078 billion
                               </p>
                               <p class="profiles">
                                    Ayvakit has about $200 million in annual sales right now with potential of upward of $750 million or more
@@ -191,7 +191,10 @@
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
-                                   Ayvakit Indolent SM awaiting approval mid 2023
+                                   Ayvakit Indolent SM PDUFA date of May 22, 2023
+                              </p>
+                              <p class="profiles">
+                                   Present Data at AAAAI on Feb 27 at 8am from Pioneer Trial
                               </p>
                               <p class="profiles">
                                    Elenestinib Phase 1 data in 2H of 2023
@@ -205,10 +208,21 @@
                               <p class="profiles">
                                    BLU-525 Submit IND 1H of 2023
                               </p>
+                              <p class="profiles">
+                                   BLU-222 Clinical Hold due to SAE
+                              </p>
+                              <p class="profiles">
+                                   Nominate the KIT Wildtype drug by mid 2023
+                              </p>
                          </section> 
 
                          <section class="section-container">
                               <h2 class="list-header">Data Readouts</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.blueprintmedicines.com/news-releases/news-release-details/blueprint-medicines-reports-clinical-data-highlighting">
+                                   Ayvakit Advanced SM Long Term Data
+                                   </a>
+                              </p>
                               <p class="profiles">
                                    <a href="https://ir.blueprintmedicines.com/news-releases/news-release-details/blueprint-medicines-announces-positive-top-line-results-pioneer">
                                    Ayvakit Indolent SM phase 2 data
