--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                          <div>
                               <h2 class="section-title">Twitter</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">&quot;This pathogen monitoring program at Kigali Intl Airport will act like a public health radar, providing leaders with near-real-time data to inform targeted response strategies.&quot; We&#39;re excited to announce a new partnership with the Rwanda Biomedical Centre! <a href="https://t.co/VaVv4mSXI3">https://t.co/VaVv4mSXI3</a></p>&mdash; Concentric by Ginkgo (@concentricbygbw) <a href="https://twitter.com/concentricbygbw/status/1625829732687175687?ref_src=twsrc%5Etfw">February 15, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Today we are pleased to announce our partnership with Zymtronix, a developer of cell-free process technologies.<a href="https://t.co/lIVUT7iYzH">https://t.co/lIVUT7iYzH</a></p>&mdash; Ginkgo Bioworks (@Ginkgo) <a href="https://twitter.com/Ginkgo/status/1626193573862338562?ref_src=twsrc%5Etfw">February 16, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
