--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/14/2023: </strong> Updated BPMC Profile on Earnings but still need the 10K report to finish.
+                                   I updated My Portfolio and changed the headings to better reflect my current strategy.
+                              <p> 
                                    <strong>2/15/2023: </strong> I added my latest guide to valuation and started filling out 
                                    the Biology page.
                               </p>
@@ -109,10 +112,6 @@
                                    <strong>2/14/2023: </strong> I added my Biotech 2k Logo which isn't anything special. I updated the Company Profile 
                                    pages. The links looked bad on small screen so I fixed them. I added Twitter Cards to every page for linking to 
                                    Twitter.
-                              </p>
-                              <p> 
-                                   <strong>2/14/2023: </strong> Updated the innovation page to expand some of the concepts and make it 
-                                   more reader friendly to newer investors who don't already understand some of the science terms. 
                               </p>
                          </div>
                     </section>
