BPMC earnings update

--- a/companies/blueprint.html
+++ b/companies/blueprint.html
@@ -177,14 +177,43 @@
                                    that comes to $25 million value.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $2.925 billion market cap. Based on the 60 million shares outstanding, that comes to $48.75.
+                                   All in, that is a $3.003 billion market cap. Based on the 60 million shares outstanding, that comes to $50.05.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   Roche has partnership for 50/50 of US sales and high teens to mid twenties royalties on ex-US sales of 
+                                   Garvretto.
+                              </p>
+                              <p class="profiles">
+                                   CStone has a partnership for China region on Ayvakit, Gavretto and Fisogatinib which they pay a 
+                                   royalty in the mid teens to low twenties to Blueprint on sales in China.
+                              </p>
+                              <p class="profiles">
+                                   Zai Lab has a partnership for China region on BLU-945 and BLU-525 which they pay a royalty in the low to mid teens
+                                   to Blueprint on sales in the China region.
+                              </p>
+                              <p class="profiles">
+                                   Clementia has a license for BLU-782 worldwide on which they will pay a royalty in the low to mid teens 
+                                   to Blueprint on all sales.
+                              </p>
+                              <p class="profiles">
+                                   IDRx has a worldwide license for a KIT13 inhibitor on which they will pay a royalty up to the low teens to Blueprint 
+                                   on all sales.
+                              </p>
+                              <p class="profiles">
+                                   Royalty Pharma purchased the right to all the ex-US Gavretto royalties that Blueprint gets from Roche 
+                                   outside the US.
+                              </p>
+                              <p class="profiles">
+                                   Sixth Street purchased the right to 9.75% of all Ayvakit and Elenestinib sales up to a max of $900 million 
+                                   sales per year. 
+                              </p>
+                              <p class="profiles">
+                                   Proteovant licensed to Blueprint technology for doing Targeted Protein Degraders. They are required to pay a 
+                                   royalty to Proteovant on commercial sales of in the range of mid to high single digits.
                               </p>
                          </section>
 
@@ -209,7 +238,7 @@
                                    BLU-525 Submit IND 1H of 2023
                               </p>
                               <p class="profiles">
-                                   BLU-222 Clinical Hold due to SAE
+                                   BLU-222 Clinical Hold due to SAE dose escalation data in 1H of 2023
                               </p>
                               <p class="profiles">
                                    Nominate the KIT Wildtype drug by mid 2023
