--- a/investing/investing.html
+++ b/investing/investing.html
@@ -102,23 +102,23 @@
 
                     <h2 class="investing-headers">Investing</h2>
                     
-                    <ul>
-                         <li class="investor-link">
+                    <ul class="investor-link">
+                         <li>
                               <a href="portfolio.html">My Portfolio</a>
                          </li>
-                         <li class="investor-link">
+                         <li>
                               <a href="#portfolio">Building my Portfolio</a>
                          </li>
-                         <li class="investor-link">
+                         <li>
                               <a href="#fundamentals">How I Pick Companies</a>
                          </li>
-                         <li class="investor-link">
+                         <li>
                               <a href="valuation.html">My Guide to Valuation</a>
                          </li>
-                         <li class="investor-link">
+                         <li>
                               <a href="#trading">Trading Around a Core Position</a>
                          </li>
-                         <li class="investor-link">
+                         <li>
                               <a href="#discipline">My Rules for Staying Disciplined</a>
                          </li>
                     </ul>
