--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
-                                   <strong>2/14/2023: </strong> Updated BPMC Profile on Earnings but still need the 10K report to finish.
+                                   <strong>2/16/2023: </strong> Updated PACB Profile for earning, but needs 10K to complete. I finished
+                                   the BPMC 10K and updated the profile.
+                              <p> 
+                              <p> 
+                                   <strong>2/16/2023: </strong> Updated BPMC Profile on Earnings but still need the 10K report to finish.
                                    I updated My Portfolio and changed the headings to better reflect my current strategy.
                               <p> 
                                    <strong>2/15/2023: </strong> I added my latest guide to valuation and started filling out 
