--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/17/2023: </strong> Added Cell Biology to the Biology page under learning about the Science.
+                              <p> 
+                              <p> 
                                    <strong>2/16/2023: </strong> Updated PACB Profile for earning, but needs 10K to complete. I finished
                                    the BPMC 10K and updated the profile.
                               <p> 
@@ -112,11 +115,6 @@
                                    <strong>2/15/2023: </strong> I added my latest guide to valuation and started filling out 
                                    the Biology page.
                               </p>
-                              <p> 
-                                   <strong>2/14/2023: </strong> I added my Biotech 2k Logo which isn't anything special. I updated the Company Profile 
-                                   pages. The links looked bad on small screen so I fixed them. I added Twitter Cards to every page for linking to 
-                                   Twitter.
-                              </p>
                          </div>
                     </section>
                </div>
@@ -125,7 +123,7 @@
                          <div>
                               <h2 class="section-title">Youtube</h2>
                               <div class="videos">
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/PYvGnKHugeQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/SyfMmU-NPhc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                               </div>
                          </div>
                     </section>
@@ -134,7 +132,7 @@
                          <div>
                               <h2 class="section-title">Twitter</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Today we are pleased to announce our partnership with Zymtronix, a developer of cell-free process technologies.<a href="https://t.co/lIVUT7iYzH">https://t.co/lIVUT7iYzH</a></p>&mdash; Ginkgo Bioworks (@Ginkgo) <a href="https://twitter.com/Ginkgo/status/1626193573862338562?ref_src=twsrc%5Etfw">February 16, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/ICYMI?src=hash&amp;ref_src=twsrc%5Etfw">#ICYMI</a> nice to see a recent article on <a href="https://twitter.com/hashtag/TPD?src=hash&amp;ref_src=twsrc%5Etfw">#TPD</a> discussing protein degraders as promising therapies for liquid and solid tumors (including 2 of our pipeline programs!) <a href="https://twitter.com/hashtag/drugdiscovery?src=hash&amp;ref_src=twsrc%5Etfw">#drugdiscovery</a> <a href="https://twitter.com/hashtag/therapeutics?src=hash&amp;ref_src=twsrc%5Etfw">#therapeutics</a><a href="https://t.co/xwkKhxHKxV">https://t.co/xwkKhxHKxV</a></p>&mdash; Kymera Therapeutics (@KymeraTx) <a href="https://twitter.com/KymeraTx/status/1626564273722753025?ref_src=twsrc%5Etfw">February 17, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
