Added Risk Management

--- a/investing/investing.html
+++ b/investing/investing.html
@@ -119,6 +119,9 @@
                               <a href="#trading">Trading Around a Core Position</a>
                          </li>
                          <li>
+                              <a href="riskmanagement.html">Risk Management</a>
+                         </li>
+                         <li>
                               <a href="#discipline">My Rules for Staying Disciplined</a>
                          </li>
                     </ul>
