--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/17/2023: </strong> Add my newest guide for Risk Management to the Investing Pages.
+                              <p> 
+                              <p> 
                                    <strong>2/17/2023: </strong> Added Cell Biology to the Biology page under learning about the Science.
                               <p> 
                               <p> 
@@ -111,10 +114,6 @@
                               <p> 
                                    <strong>2/16/2023: </strong> Updated BPMC Profile on Earnings but still need the 10K report to finish.
                                    I updated My Portfolio and changed the headings to better reflect my current strategy.
-                              <p> 
-                                   <strong>2/15/2023: </strong> I added my latest guide to valuation and started filling out 
-                                   the Biology page.
-                              </p>
                          </div>
                     </section>
                </div>
