--- a/investing/riskmanagement.html
+++ b/investing/riskmanagement.html
@@ -81,7 +81,7 @@
 
                <div class="investing-container">
 
-                    <h2 class="investing-headers">Valuation</h2>
+                    <h2 class="investing-headers">Risk Management</h2>
                     
                     <ul>
                          <li class="investor-link">
