--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                          <div>
                               <h2 class="section-title">Recent News</h2>
                               <p>
+                                   <strong>2/17/2023: </strong> I sold the last of my CDXS position as I lost faith in that company. I 
+                                   took my losses over the past 2 years on this one. Now I can put that cash into something that might 
+                                   make money istead of just losing me money.
+                              </p>
+                              <p>
                                    <strong>2/10/2023: </strong> I sold just enough for my XBI in my Charity IRA to buy .94% position in CRSP.
                               </p>
                               <p>
@@ -131,7 +136,7 @@
                          <div>
                               <h2 class="section-title">Twitter</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/ICYMI?src=hash&amp;ref_src=twsrc%5Etfw">#ICYMI</a> nice to see a recent article on <a href="https://twitter.com/hashtag/TPD?src=hash&amp;ref_src=twsrc%5Etfw">#TPD</a> discussing protein degraders as promising therapies for liquid and solid tumors (including 2 of our pipeline programs!) <a href="https://twitter.com/hashtag/drugdiscovery?src=hash&amp;ref_src=twsrc%5Etfw">#drugdiscovery</a> <a href="https://twitter.com/hashtag/therapeutics?src=hash&amp;ref_src=twsrc%5Etfw">#therapeutics</a><a href="https://t.co/xwkKhxHKxV">https://t.co/xwkKhxHKxV</a></p>&mdash; Kymera Therapeutics (@KymeraTx) <a href="https://twitter.com/KymeraTx/status/1626564273722753025?ref_src=twsrc%5Etfw">February 17, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">1/A major breakthrough was reported by <a href="https://twitter.com/davidrliu?ref_src=twsrc%5Etfw">@davidrliu</a> regarding a novel <a href="https://twitter.com/hashtag/delivery?src=hash&amp;ref_src=twsrc%5Etfw">#delivery</a> platform - engineered virus-like particle - <a href="https://twitter.com/hashtag/eVLP?src=hash&amp;ref_src=twsrc%5Etfw">#eVLP</a> that mediates efficient in vivo delivery of proteins - including base editors &amp; Cas9 nuclease, resulting in therapeutic editing in multiple mouse organs <a href="https://t.co/aHuNGJGvWn">pic.twitter.com/aHuNGJGvWn</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1481315342244888580?ref_src=twsrc%5Etfw">January 12, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
