Added Financial Plannign

--- a/index.html
+++ b/index.html
@@ -82,7 +82,16 @@
           <main>
                <div class="logo"><img class="page-logo" src="images/thumbnail.jpg" alt="Biotech2k.com"></div>
                
+               <section>
+                    <ul class="investor-link">Quick Links:
+                         <li><a href="investing/portfolio.html">My Portfolio</a></li>
+                         <li><a href="investing/investing.html">Learn about Financial Planning</a></li>
+                         <li><a href="learning/science.html">Learn about the Science</a></li>
+                    </ul>
+               </section> 
+
                <div class="front-page">
+
                     <section class="news-updates">
                          <div>
                               <h2 class="section-title">Recent News</h2>
@@ -127,7 +136,7 @@
                          <div>
                               <h2 class="section-title">Youtube</h2>
                               <div class="videos">
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/SyfMmU-NPhc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/aK3qbd6OqxY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                               </div>
                          </div>
                     </section>
@@ -136,12 +145,11 @@
                          <div>
                               <h2 class="section-title">Twitter</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">1/A major breakthrough was reported by <a href="https://twitter.com/davidrliu?ref_src=twsrc%5Etfw">@davidrliu</a> regarding a novel <a href="https://twitter.com/hashtag/delivery?src=hash&amp;ref_src=twsrc%5Etfw">#delivery</a> platform - engineered virus-like particle - <a href="https://twitter.com/hashtag/eVLP?src=hash&amp;ref_src=twsrc%5Etfw">#eVLP</a> that mediates efficient in vivo delivery of proteins - including base editors &amp; Cas9 nuclease, resulting in therapeutic editing in multiple mouse organs <a href="https://t.co/aHuNGJGvWn">pic.twitter.com/aHuNGJGvWn</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1481315342244888580?ref_src=twsrc%5Etfw">January 12, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">1/<a href="https://twitter.com/ApellisPharma?ref_src=twsrc%5Etfw">@ApellisPharma</a> announced that the <a href="https://twitter.com/US_FDA?ref_src=twsrc%5Etfw">@US_FDA</a> has approved <a href="https://twitter.com/hashtag/SYFOVRE?src=hash&amp;ref_src=twsrc%5Etfw">#SYFOVRE</a> aimed to treat <a href="https://twitter.com/hashtag/GeographicAtrophy?src=hash&amp;ref_src=twsrc%5Etfw">#GeographicAtrophy</a> <a href="https://twitter.com/hashtag/GA?src=hash&amp;ref_src=twsrc%5Etfw">#GA</a> - secondary condition to age-related macular degeneration <a href="https://twitter.com/hashtag/AMD?src=hash&amp;ref_src=twsrc%5Etfw">#AMD</a>. SYFOVRE is the first and only FDA-approved treatment for GA. <a href="https://twitter.com/search?q=%24APLS&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$APLS</a> <a href="https://twitter.com/hashtag/BioTech?src=hash&amp;ref_src=twsrc%5Etfw">#BioTech</a> <a href="https://twitter.com/hashtag/Genomics?src=hash&amp;ref_src=twsrc%5Etfw">#Genomics</a> <a href="https://twitter.com/hashtag/Ophthalmology?src=hash&amp;ref_src=twsrc%5Etfw">#Ophthalmology</a> <a href="https://twitter.com/cgfran01?ref_src=twsrc%5Etfw">@cgfran01</a> <a href="https://t.co/YfylIFiEZP">pic.twitter.com/YfylIFiEZP</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1626995236697169924?ref_src=twsrc%5Etfw">February 18, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
                </div>
-               
           </main>
 
           <!--Here Starts the Footer-->
