--- a/investing/investing.html
+++ b/investing/investing.html
@@ -83,46 +83,47 @@
 
                     <section>
                          <h2 class="investing-headers">
-                              Investing Strategies and Updates
+                              Financial Planning and Investing
                          </h2>
 
                          <p class="large-text">
-                              Investing in biotech can be hard. The statistics show that 90% of the science that enters the clinic fails.
-                              When investing in biotech, I find that I do better when I have a good strategy. I think strategy trumps any conviction
-                              I might have in any company. I blend a hybrid strategy of trading and investing that works well for me.
-                              I am not a financial advisor, but I have been investing for 27 years. Here in the Investing section,
-                              I will share my biotech portfolio and all my strategies for investing. This section will focus on sharing
-                              how I build my portfolio by focusing on these key innovation themes. I will share how I research companies
-                              and rank them from best to worst for each science theme. I will share how I manage my portfolio strategy with
-                              trading around my core position. I will share my system for valuing biotech companies. I will share my rules
-                              for staying disciplined. This is not designed to be financial advice. You should always consult a professional 
-                              financial advisor before making any investments. 
+                              I have been investing for 27 years now, but I would not consider myself an expert. I always consider 
+                              myself a student of Savings and Investing. I am always learning and taking courses on the topics of 
+                              Financial Planning and Investing. This is not designed to be financial advice as I am not a 
+                              professional. This is designed to help you learn from my experiences. The one thing we do not teach 
+                              in our educational system is Financial Literacy. This is one topic we are forced to go out and learn 
+                              on our own. Statistics show that the average American only has about $150,000 saved for retirement. 
+                              That leaves many Americans unprepared for retirement or any other major life event. When I got into 
+                              learning about Financial Planning and investing, it dramatically changed my life. In recent years, I 
+                              have learned more and more about financial planning through courses on these topics. Here I am going 
+                              to share with you my understanding of the concepts so they might help you develop an interest in 
+                              learning to Save and Invest. That way you can decide if it's something you want to pursue more 
+                              before spending money on any courses. Hopefully, I have covered these concepts well enough that you 
+                              won't even have to spend money on learning more. 
                          </p>
                     </section>
-
-                    <h2 class="investing-headers">Investing</h2>
                     
                     <ul class="investor-link">
                          <li>
                               <a href="portfolio.html">My Portfolio</a>
                          </li>
                          <li>
-                              <a href="#portfolio">Building my Portfolio</a>
+                              <a href="planning.html">Financial Planning</a>
                          </li>
                          <li>
-                              <a href="#fundamentals">How I Pick Companies</a>
+                              <a href="#">Saving and Investing</a>
                          </li>
                          <li>
-                              <a href="valuation.html">My Guide to Valuation</a>
+                              <a href="">Buidling a Diviersified Portfolio</a>
                          </li>
                          <li>
-                              <a href="#trading">Trading Around a Core Position</a>
+                              <a href="#">Managing Taxes and Fees</a>
                          </li>
                          <li>
                               <a href="riskmanagement.html">Risk Management</a>
                          </li>
                          <li>
-                              <a href="#discipline">My Rules for Staying Disciplined</a>
+                              <a href="#">Assessing and Rebalancing</a>
                          </li>
                     </ul>
 
