--- a/investing/riskmanagement.html
+++ b/investing/riskmanagement.html
@@ -83,11 +83,11 @@
 
                     <h2 class="investing-headers">Risk Management</h2>
                     
-                    <ul>
-                         <li class="investor-link">
+                    <ul class="investor-link">
+                         <li>
                               <a href="#understand">Understanding Risk</a>
                          </li>
-                         <li class="investor-link">
+                         <li>
                               <a href="#mitigate">Risk Mitigation Strategies</a>
                          </li>
                     </ul>
