--- a/index.html
+++ b/index.html
@@ -106,15 +106,17 @@
                               <p>
                                    <strong>2/10/2023: </strong> I added a starting position in VERV to my Charity IRA of .94%.
                               </p>
-                              <p>
-                                   <strong>2/9/2023: </strong> I added a starting position in ABCL to my Charity IRA of .94%.
-                              </p>
                          </div>
                     </section>
 
                     <section class="news-updates">
                          <div>
                               <h2 class="section-title">Website Updates</h2>
+                              <p>
+                                   <strong>2/18/2023: </strong> I added a <a href="investing/planning.html">Financial Planning</a> page today.
+                                   The whole investment section is under construction as I expand the topics and content. Most of the links don't 
+                                   work yet, but they will once it's finished.
+                              </p>
                               <p> 
                                    <strong>2/17/2023: </strong> Add my newest guide for Risk Management to the Investing Pages.
                               <p> 
